Fix z-index background headline

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -96,9 +96,13 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 .head {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   position: relative;
   padding: 6rem 1.5rem;
   border-bottom-left-radius: 5rem;
